crates/murphy-plugin-macros/tests/ui/fail_node_pattern_quantifier_in_union_arm.stderr
error: node_pattern!: pattern parse error: postfix `*` / `+` / `?` is only valid as a direct child of a node match (at 1..5)
 --> tests/ui/fail_node_pattern_quantifier_in_union_arm.rs:4:40
  |
4 | murphy_plugin_macros::node_pattern!(m, "{int+ sym}");
  |                                        ^^^^^^^^^^^^
